[gd_scene load_steps=6 format=3 uid="uid://cski23xecm1b4"]

[ext_resource type="Script" path="res://Scripts/LobbyController.gd" id="1_l1dhu"]
[ext_resource type="PackedScene" uid="uid://cnvf8d7y8w1wt" path="res://Tilemaps/base_tilemap.tscn" id="1_qgelg"]
[ext_resource type="PackedScene" uid="uid://3toqf2ivdm4i" path="res://GameObjects/Cameras/ZoomCam.tscn" id="3_mx0nm"]
[ext_resource type="PackedScene" uid="uid://c2hw12giijv64" path="res://GameObjects/Enemies/MissileSpawner.tscn" id="4_hp00e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xudr5"]
size = Vector2(536.5, 313)

[node name="Lobby" type="Node2D"]
script = ExtResource("1_l1dhu")

[node name="TileMap" parent="." instance=ExtResource("1_qgelg")]
layer_0/tile_data = PackedInt32Array(0, 0, 4, 65536, 0, 5, 131072, 0, 5, 196608, 0, 5, 262144, 0, 5, 327680, 0, 5, 393216, 0, 5, 458752, 0, 5, 524288, 0, 5, 589824, 0, 5, 655360, 0, 5, 720896, 0, 5, 786432, 0, 5, 851968, 0, 5, 917504, 0, 5, 983040, 0, 5, 1048576, 0, 5, 1114112, 0, 5, 1179648, 0, 5, 1245184, 0, 5, 1310720, 0, 5, 1376256, 0, 5, 1441792, 0, 6, 1441793, 65536, 6, 1441794, 65536, 6, 1441795, 65536, 6, 1441796, 65536, 6, 1441797, 65536, 6, 1441798, 65536, 6, 1441799, 65536, 6, 1441800, 65536, 6, 1441801, 65536, 6, 1441802, 65536, 6, 1441803, 65536, 6, 1441804, 65536, 6, 1441805, 65536, 6, 1441806, 65536, 6, 1441807, 65536, 6, 1441808, 65536, 6, 1441809, 65536, 6, 1441810, 65536, 6, 1441811, 65536, 6, 1441812, 65536, 6, 1441813, 65536, 6, 1441814, 65536, 6, 1441815, 65536, 6, 1441816, 65536, 6, 1441817, 65536, 6, 1441818, 65536, 6, 1441819, 65536, 6, 1441820, 65536, 6, 1441821, 65536, 6, 1441822, 65536, 6, 1441823, 65536, 6, 1441824, 65536, 6, 1441825, 65536, 6, 1441826, 65536, 6, 1441827, 65536, 6, 1441828, 65536, 6, 1441829, 65536, 6, 1441830, 65536, 6, 1441831, 65536, 6, 1441832, 65536, 6, 1441833, 65536, 6, 1441834, 65536, 6, 1441835, 65536, 6, 1441836, 65536, 6, 1441837, 65536, 6, 1441838, 65536, 6, 1441839, 65536, 6, 1441840, 65536, 6, 1441841, 65536, 6, 1376305, 131072, 6, 1310769, 131072, 5, 1245233, 131072, 5, 1179697, 131072, 5, 1114161, 131072, 5, 1048625, 131072, 5, 983089, 131072, 5, 917553, 131072, 5, 852017, 131072, 5, 786481, 131072, 5, 720945, 131072, 5, 655409, 131072, 5, 589873, 131072, 5, 524337, 131072, 5, 458801, 131072, 5, 393265, 131072, 5, 327729, 131072, 5, 262193, 131072, 5, 196657, 131072, 5, 131121, 131072, 5, 65585, 131072, 5, 49, 131072, 4, 48, 65536, 4, 47, 65536, 4, 46, 65536, 4, 45, 65536, 4, 44, 65536, 4, 43, 65536, 4, 42, 65536, 4, 41, 65536, 4, 40, 65536, 4, 39, 65536, 4, 38, 65536, 4, 37, 65536, 4, 36, 65536, 4, 35, 65536, 4, 34, 65536, 4, 33, 65536, 4, 32, 65536, 4, 31, 65536, 4, 30, 65536, 4, 29, 65536, 4, 28, 65536, 4, 27, 65536, 4, 26, 65536, 4, 25, 65536, 4, 24, 65536, 4, 23, 65536, 4, 22, 65536, 4, 21, 65536, 4, 20, 65536, 4, 19, 65536, 4, 18, 65536, 4, 17, 65536, 4, 16, 65536, 4, 15, 65536, 4, 14, 65536, 4, 13, 65536, 4, 12, 65536, 4, 11, 65536, 4, 10, 65536, 4, 9, 65536, 4, 8, 65536, 4, 7, 65536, 4, 6, 65536, 4, 5, 65536, 4, 4, 65536, 4, 3, 65536, 4, 2, 65536, 4, 1, 65536, 4, 131075, 0, 5, 65539, 0, 5, 65538, 0, 5, 65537, 0, 5, 131073, 0, 5, 196609, 0, 5, 262145, 0, 5, 327681, 0, 5, 393217, 0, 5, 458753, 0, 5, 524289, 0, 5, 589825, 0, 5, 655361, 0, 5, 720897, 0, 5, 786433, 0, 5, 851969, 0, 5, 917505, 0, 5, 983041, 0, 5, 1048577, 0, 5, 1114113, 0, 5, 1179649, 0, 5, 1245185, 0, 5, 1310721, 0, 5, 1376257, 0, 5, 1376258, 0, 5, 1310722, 0, 5, 1245186, 0, 5, 1179650, 0, 5, 1114114, 0, 5, 1048578, 0, 5, 983042, 0, 5, 917506, 0, 5, 851970, 0, 5, 786434, 0, 5, 720898, 0, 5, 655362, 0, 5, 589826, 0, 5, 524290, 0, 5, 458754, 0, 5, 393218, 0, 5, 327682, 0, 5, 262146, 0, 5, 196610, 0, 5, 131074, 0, 5, 196611, 0, 5, 262147, 0, 5, 327683, 0, 5, 393219, 0, 5, 458755, 0, 5, 524291, 0, 5, 589827, 0, 5, 655363, 0, 5, 720899, 0, 5, 786435, 0, 5, 851971, 0, 5, 917507, 0, 5, 983043, 0, 5, 1048579, 0, 5, 1114115, 0, 5, 1179651, 0, 5, 1245187, 0, 5, 1310723, 0, 5, 1376259, 0, 5, 1376260, 0, 5, 1310724, 0, 5, 1245188, 0, 5, 1179652, 0, 5, 1114116, 0, 5, 1048580, 0, 5, 983044, 0, 5, 917508, 0, 5, 851972, 0, 5, 786436, 0, 5, 720900, 0, 5, 655364, 0, 5, 589828, 0, 5, 524292, 0, 5, 458756, 0, 5, 393220, 0, 5, 327684, 0, 5, 262148, 0, 5, 196612, 0, 5, 131076, 0, 5, 65540, 0, 5, 65541, 0, 5, 131077, 0, 5, 196613, 0, 5, 262149, 0, 5, 327685, 0, 5, 393221, 0, 5, 458757, 0, 5, 524293, 0, 5, 589829, 0, 5, 655365, 0, 5, 720901, 0, 5, 786437, 0, 5, 851973, 0, 5, 917509, 0, 5, 983045, 0, 5, 1048581, 0, 5, 1114117, 0, 5, 1179653, 0, 5, 1245189, 0, 5, 1310725, 0, 5, 1376261, 0, 5, 1376262, 0, 5, 1310726, 0, 5, 1245190, 0, 5, 1179654, 0, 5, 1114118, 0, 5, 1048582, 0, 5, 983046, 0, 5, 917510, 0, 5, 851974, 0, 5, 786438, 0, 5, 720902, 0, 5, 655366, 0, 5, 589830, 0, 5, 524294, 0, 5, 458758, 0, 5, 393222, 0, 5, 327686, 0, 5, 262150, 0, 5, 196614, 0, 5, 131078, 0, 5, 65542, 0, 5, 65543, 0, 5, 131079, 0, 5, 196615, 0, 5, 262151, 0, 5, 327687, 0, 5, 393223, 0, 5, 458759, 0, 5, 524295, 0, 5, 589831, 0, 5, 655367, 0, 5, 720903, 0, 5, 786439, 0, 5, 851975, 0, 5, 917511, 0, 5, 983047, 0, 5, 1048583, 0, 5, 1114119, 0, 5, 1179655, 0, 5, 1245191, 0, 5, 1310727, 0, 5, 1376263, 0, 5, 1376264, 0, 5, 1310728, 0, 5, 1245192, 0, 5, 1179656, 0, 5, 1114120, 0, 5, 1048584, 0, 5, 983048, 0, 5, 917512, 0, 5, 851976, 0, 5, 786440, 0, 5, 720904, 0, 5, 655368, 0, 5, 589832, 0, 5, 524296, 0, 5, 458760, 0, 5, 393224, 0, 5, 327688, 0, 5, 262152, 0, 5, 196616, 0, 5, 131080, 0, 5, 65544, 0, 5, 65545, 0, 5, 131081, 0, 5, 196617, 0, 5, 262153, 0, 5, 327689, 0, 5, 393225, 0, 5, 458761, 0, 5, 524297, 0, 5, 589833, 0, 5, 655369, 0, 5, 720905, 0, 5, 786441, 0, 5, 851977, 0, 5, 917513, 0, 5, 983049, 0, 5, 1048585, 0, 5, 1114121, 0, 5, 1179657, 0, 5, 1245193, 0, 5, 1310729, 0, 5, 1376265, 0, 5, 1376266, 0, 5, 1310730, 0, 5, 1245194, 0, 5, 1179658, 0, 5, 1114122, 0, 5, 1048586, 0, 5, 983050, 0, 5, 917514, 0, 5, 851978, 0, 5, 786442, 0, 5, 720906, 0, 5, 655370, 0, 5, 589834, 0, 5, 524298, 0, 5, 458762, 0, 5, 393226, 0, 5, 327690, 0, 5, 262154, 0, 5, 196618, 0, 5, 131082, 0, 5, 65546, 0, 5, 65547, 0, 5, 131083, 0, 5, 196619, 0, 1, 262155, 0, 2, 327691, 0, 2, 393227, 0, 2, 458763, 0, 2, 524299, 0, 3, 589835, 0, 5, 655371, 0, 5, 720907, 0, 5, 786443, 0, 5, 851979, 0, 5, 917515, 0, 5, 983051, 0, 5, 1048587, 0, 5, 1114123, 0, 5, 1179659, 0, 5, 1245195, 0, 5, 1310731, 0, 5, 1376267, 0, 5, 1376268, 0, 5, 1310732, 0, 5, 1245196, 0, 5, 1179660, 0, 5, 1114124, 0, 5, 1048588, 0, 5, 983052, 0, 5, 917516, 0, 5, 851980, 0, 5, 786444, 0, 5, 720908, 0, 5, 655372, 0, 5, 589836, 0, 5, 524300, 65536, 3, 458764, 65536, 2, 393228, 65536, 2, 327692, 65536, 2, 262156, 65536, 2, 196620, 65536, 1, 131084, 0, 5, 65548, 0, 5, 65549, 0, 5, 131085, 0, 5, 196621, 65536, 1, 262157, 65536, 2, 327693, 65536, 2, 393229, 65536, 2, 458765, 65536, 2, 524301, 65536, 3, 589837, 0, 5, 655373, 0, 5, 720909, 0, 5, 786445, 0, 5, 851981, 0, 5, 917517, 0, 5, 983053, 0, 5, 1048589, 0, 5, 1114125, 0, 5, 1179661, 0, 5, 1245197, 0, 5, 1310733, 0, 5, 1376269, 0, 5, 1376270, 0, 5, 1310734, 0, 5, 1245198, 0, 5, 1179662, 0, 5, 1114126, 0, 5, 1048590, 0, 5, 983054, 0, 5, 917518, 0, 5, 851982, 0, 5, 786446, 0, 5, 720910, 0, 5, 655374, 0, 5, 589838, 0, 5, 524302, 65536, 3, 458766, 65536, 2, 393230, 65536, 2, 327694, 65536, 2, 262158, 65536, 2, 196622, 65536, 1, 131086, 0, 5, 65550, 0, 5, 65551, 0, 5, 131087, 0, 5, 196623, 65536, 1, 262159, 65536, 2, 327695, 65536, 2, 393231, 65536, 2, 458767, 65536, 2, 524303, 65536, 3, 589839, 0, 5, 655375, 0, 5, 720911, 0, 5, 786447, 0, 5, 851983, 0, 5, 917519, 0, 5, 983055, 0, 5, 1048591, 0, 5, 1114127, 0, 5, 1179663, 0, 5, 1245199, 0, 5, 1310735, 0, 5, 1376271, 0, 5, 1376272, 0, 5, 1310736, 0, 5, 1245200, 0, 5, 1179664, 0, 5, 1114128, 0, 5, 1048592, 0, 5, 983056, 0, 5, 917520, 0, 5, 851984, 0, 5, 786448, 0, 5, 720912, 0, 5, 655376, 0, 5, 589840, 0, 5, 524304, 65536, 3, 458768, 65536, 2, 393232, 65536, 2, 327696, 65536, 2, 262160, 65536, 2, 196624, 65536, 1, 131088, 0, 5, 65552, 0, 5, 65553, 0, 5, 131089, 0, 5, 196625, 65536, 1, 262161, 65536, 2, 327697, 65536, 2, 393233, 65536, 2, 458769, 65536, 2, 524305, 65536, 3, 589841, 0, 5, 655377, 0, 5, 720913, 0, 5, 786449, 0, 5, 851985, 0, 5, 917521, 0, 5, 983057, 0, 5, 1048593, 0, 5, 1114129, 0, 5, 1179665, 0, 5, 1245201, 0, 5, 1310737, 0, 5, 1376273, 0, 5, 1376274, 0, 5, 1310738, 0, 5, 1245202, 0, 5, 1179666, 0, 5, 1114130, 0, 5, 1048594, 0, 5, 983058, 0, 5, 917522, 0, 5, 851986, 0, 5, 786450, 0, 5, 720914, 0, 5, 655378, 0, 5, 589842, 0, 5, 524306, 65536, 3, 458770, 65536, 2, 393234, 65536, 2, 327698, 65536, 2, 262162, 65536, 2, 196626, 65536, 1, 131090, 0, 5, 65554, 0, 5, 65555, 0, 5, 131091, 0, 5, 196627, 65536, 1, 262163, 65536, 2, 327699, 65536, 2, 393235, 65536, 2, 458771, 65536, 2, 524307, 65536, 3, 589843, 0, 5, 655379, 0, 5, 720915, 0, 5, 786451, 0, 5, 851987, 0, 5, 917523, 0, 5, 983059, 0, 5, 1048595, 0, 5, 1114131, 0, 5, 1179667, 0, 5, 1245203, 0, 5, 1310739, 0, 5, 1376275, 0, 5, 1376276, 0, 5, 1310740, 0, 5, 1245204, 0, 5, 1179668, 0, 5, 1114132, 0, 5, 1048596, 0, 5, 983060, 0, 5, 917524, 0, 5, 851988, 0, 5, 786452, 0, 5, 720916, 0, 5, 655380, 0, 5, 589844, 0, 5, 524308, 65536, 3, 458772, 65536, 2, 393236, 65536, 2, 327700, 65536, 2, 262164, 65536, 2, 196628, 65536, 1, 131092, 0, 5, 65556, 0, 5, 65557, 0, 5, 131093, 0, 5, 196629, 65536, 1, 262165, 65536, 2, 327701, 65536, 2, 393237, 65536, 2, 458773, 65536, 2, 524309, 65536, 3, 589845, 0, 5, 655381, 0, 5, 720917, 0, 5, 786453, 0, 5, 851989, 0, 5, 917525, 0, 5, 983061, 0, 5, 1048597, 0, 5, 1114133, 0, 5, 1179669, 0, 5, 1245205, 0, 5, 1310741, 0, 5, 1376277, 0, 5, 1376278, 0, 5, 1310742, 0, 5, 1245206, 0, 5, 1179670, 0, 5, 1114134, 0, 5, 1048598, 0, 5, 983062, 0, 5, 917526, 0, 5, 851990, 0, 5, 786454, 0, 5, 720918, 0, 5, 655382, 0, 5, 589846, 0, 5, 524310, 65536, 3, 458774, 65536, 2, 393238, 65536, 2, 327702, 65536, 2, 262166, 65536, 2, 196630, 65536, 1, 131094, 0, 5, 65558, 0, 5, 65559, 0, 5, 131095, 0, 5, 196631, 65536, 1, 262167, 65536, 2, 327703, 65536, 2, 393239, 65536, 2, 458775, 65536, 2, 524311, 65536, 3, 589847, 0, 5, 655383, 0, 5, 720919, 0, 5, 786455, 0, 5, 851991, 0, 5, 917527, 0, 5, 983063, 0, 5, 1048599, 0, 5, 1114135, 0, 5, 1179671, 0, 5, 1245207, 0, 5, 1310743, 0, 5, 1376279, 0, 5, 1376280, 0, 5, 1310744, 0, 5, 1245208, 0, 5, 1179672, 0, 5, 1114136, 0, 5, 1048600, 0, 5, 983064, 0, 5, 917528, 0, 5, 851992, 0, 5, 786456, 0, 5, 720920, 0, 5, 655384, 0, 5, 589848, 0, 5, 524312, 65536, 3, 458776, 65536, 2, 393240, 65536, 2, 327704, 65536, 2, 262168, 65536, 2, 196632, 65536, 1, 131096, 0, 5, 65560, 0, 5, 65561, 0, 5, 131097, 0, 5, 196633, 65536, 1, 262169, 65536, 2, 327705, 65536, 2, 393241, 65536, 2, 458777, 65536, 2, 524313, 65536, 3, 589849, 0, 5, 655385, 0, 5, 720921, 0, 5, 786457, 0, 5, 851993, 0, 5, 917529, 0, 5, 983065, 0, 5, 1048601, 0, 5, 1114137, 0, 5, 1179673, 0, 5, 1245209, 0, 5, 1310745, 0, 5, 1376281, 0, 5, 1376282, 0, 5, 1310746, 0, 5, 1245210, 0, 5, 1179674, 0, 5, 1114138, 0, 5, 1048602, 0, 5, 983066, 0, 5, 917530, 0, 5, 851994, 0, 5, 786458, 0, 5, 720922, 0, 5, 655386, 0, 5, 589850, 0, 5, 524314, 65536, 3, 458778, 65536, 2, 393242, 65536, 2, 327706, 65536, 2, 262170, 65536, 2, 196634, 65536, 1, 131098, 0, 5, 65562, 0, 5, 65563, 0, 5, 131099, 0, 5, 196635, 65536, 1, 262171, 65536, 2, 327707, 65536, 2, 393243, 65536, 2, 458779, 65536, 2, 524315, 65536, 3, 589851, 0, 5, 655387, 0, 5, 720923, 0, 5, 786459, 0, 5, 851995, 0, 5, 917531, 0, 5, 983067, 0, 5, 1048603, 0, 5, 1114139, 0, 5, 1179675, 0, 5, 1245211, 0, 5, 1310747, 0, 5, 1376283, 0, 5, 1376284, 0, 5, 1310748, 0, 5, 1245212, 0, 5, 1179676, 0, 5, 1114140, 0, 5, 1048604, 0, 5, 983068, 0, 5, 917532, 0, 5, 851996, 0, 5, 786460, 0, 5, 720924, 0, 5, 655388, 0, 5, 589852, 0, 5, 524316, 65536, 3, 458780, 65536, 2, 393244, 65536, 2, 327708, 65536, 2, 262172, 65536, 2, 196636, 65536, 1, 131100, 0, 5, 65564, 0, 5, 65565, 0, 5, 131101, 0, 5, 196637, 65536, 1, 262173, 65536, 2, 327709, 65536, 2, 393245, 65536, 2, 458781, 65536, 2, 524317, 65536, 3, 589853, 0, 5, 655389, 0, 5, 720925, 0, 5, 786461, 0, 5, 851997, 0, 5, 917533, 0, 5, 983069, 0, 5, 1048605, 0, 5, 1114141, 0, 5, 1179677, 0, 5, 1245213, 0, 5, 1310749, 0, 5, 1376285, 0, 5, 1376286, 0, 5, 1310750, 0, 5, 1245214, 0, 5, 1179678, 0, 5, 1114142, 0, 5, 1048606, 0, 5, 983070, 0, 5, 917534, 0, 5, 851998, 0, 5, 786462, 0, 5, 720926, 0, 5, 655390, 0, 5, 589854, 0, 5, 524318, 65536, 3, 458782, 65536, 2, 393246, 65536, 2, 327710, 65536, 2, 262174, 65536, 2, 196638, 65536, 1, 131102, 0, 5, 65566, 0, 5, 65567, 0, 5, 131103, 0, 5, 196639, 65536, 1, 262175, 65536, 2, 327711, 65536, 2, 393247, 65536, 2, 458783, 65536, 2, 524319, 65536, 3, 589855, 0, 5, 655391, 0, 5, 720927, 0, 5, 786463, 0, 5, 851999, 0, 5, 917535, 0, 5, 983071, 0, 5, 1048607, 0, 5, 1114143, 0, 5, 1179679, 0, 5, 1245215, 0, 5, 1310751, 0, 5, 1376287, 0, 5, 1376288, 0, 5, 1310752, 0, 5, 1245216, 0, 5, 1179680, 0, 5, 1114144, 0, 5, 1048608, 0, 5, 983072, 0, 5, 917536, 0, 5, 852000, 0, 5, 786464, 0, 5, 720928, 0, 5, 655392, 0, 5, 589856, 0, 5, 524320, 65536, 3, 458784, 65536, 2, 393248, 65536, 2, 327712, 65536, 2, 262176, 65536, 2, 196640, 65536, 1, 131104, 0, 5, 65568, 0, 5, 65569, 0, 5, 131105, 0, 5, 196641, 131072, 1, 262177, 131072, 2, 327713, 131072, 2, 393249, 131072, 2, 458785, 131072, 2, 524321, 131072, 3, 589857, 0, 5, 655393, 0, 5, 720929, 0, 5, 786465, 0, 5, 852001, 0, 5, 917537, 0, 5, 983073, 0, 5, 1048609, 0, 5, 1114145, 0, 5, 1179681, 0, 5, 1245217, 0, 5, 1310753, 0, 5, 1376289, 0, 5, 1376290, 0, 5, 1310754, 0, 5, 1245218, 0, 5, 1179682, 0, 5, 1114146, 0, 5, 1048610, 0, 5, 983074, 0, 5, 917538, 0, 5, 852002, 0, 5, 786466, 0, 5, 720930, 0, 5, 655394, 0, 5, 589858, 0, 5, 524322, 0, 5, 458786, 0, 5, 393250, 0, 5, 327714, 0, 5, 262178, 0, 5, 196642, 0, 5, 131106, 0, 5, 65570, 0, 5, 65571, 0, 5, 131107, 0, 5, 196643, 0, 5, 262179, 0, 5, 327715, 0, 5, 393251, 0, 5, 458787, 0, 5, 524323, 0, 5, 589859, 0, 5, 655395, 0, 5, 720931, 0, 5, 786467, 0, 5, 852003, 0, 5, 917539, 0, 5, 983075, 0, 5, 1048611, 0, 5, 1114147, 0, 5, 1179683, 0, 5, 1245219, 0, 5, 1310755, 0, 5, 1376291, 0, 5, 1376292, 0, 5, 1310756, 0, 5, 1245220, 0, 5, 1179684, 0, 5, 1114148, 0, 5, 1048612, 0, 5, 983076, 0, 5, 917540, 0, 5, 852004, 0, 5, 786468, 0, 5, 720932, 0, 5, 655396, 0, 5, 589860, 0, 5, 524324, 0, 5, 458788, 0, 5, 393252, 0, 5, 327716, 0, 5, 262180, 0, 5, 196644, 0, 5, 131108, 0, 5, 65572, 0, 5, 65573, 0, 5, 131109, 0, 5, 196645, 0, 5, 262181, 0, 5, 327717, 0, 5, 393253, 0, 5, 458789, 0, 5, 524325, 0, 5, 589861, 0, 5, 655397, 0, 5, 720933, 0, 5, 786469, 0, 5, 852005, 0, 5, 917541, 0, 5, 983077, 0, 5, 1048613, 0, 5, 1114149, 0, 5, 1179685, 0, 5, 1245221, 0, 5, 1310757, 0, 5, 1376293, 0, 5, 1376294, 0, 5, 1310758, 0, 5, 1245222, 0, 5, 1179686, 0, 5, 1114150, 0, 5, 1048614, 0, 5, 983078, 0, 5, 917542, 0, 5, 852006, 0, 5, 786470, 0, 5, 720934, 0, 5, 655398, 0, 5, 589862, 0, 5, 524326, 0, 5, 458790, 0, 5, 393254, 0, 5, 327718, 0, 5, 262182, 0, 5, 196646, 0, 5, 131110, 0, 5, 65574, 0, 5, 65575, 0, 5, 131111, 0, 5, 196647, 0, 5, 262183, 0, 5, 327719, 0, 5, 393255, 0, 5, 458791, 0, 5, 524327, 0, 5, 589863, 0, 5, 655399, 0, 5, 720935, 0, 5, 786471, 0, 5, 852007, 0, 5, 917543, 0, 5, 983079, 0, 5, 1048615, 0, 5, 1114151, 0, 5, 1179687, 0, 5, 1245223, 0, 5, 1310759, 0, 5, 1376295, 0, 5, 1376296, 0, 5, 1310760, 0, 5, 1245224, 0, 5, 1179688, 0, 5, 1114152, 0, 5, 1048616, 0, 5, 983080, 0, 5, 917544, 0, 5, 852008, 0, 5, 786472, 0, 5, 720936, 0, 5, 655400, 0, 5, 589864, 0, 5, 524328, 0, 5, 458792, 0, 5, 393256, 0, 5, 327720, 0, 5, 262184, 0, 5, 196648, 0, 5, 131112, 0, 5, 65576, 0, 5, 65577, 0, 5, 131113, 0, 5, 196649, 0, 5, 262185, 0, 5, 327721, 0, 5, 393257, 0, 5, 458793, 0, 5, 524329, 0, 5, 589865, 0, 5, 655401, 0, 5, 720937, 0, 5, 786473, 0, 5, 852009, 0, 5, 917545, 0, 5, 983081, 0, 5, 1048617, 0, 5, 1114153, 0, 5, 1179689, 0, 5, 1245225, 0, 5, 1310761, 0, 5, 1376297, 0, 5, 1376298, 0, 5, 1310762, 0, 5, 1245226, 0, 5, 1179690, 0, 5, 1114154, 0, 5, 1048618, 0, 5, 983082, 0, 5, 917546, 0, 5, 852010, 0, 5, 786474, 0, 5, 720938, 0, 5, 655402, 0, 5, 589866, 0, 5, 524330, 0, 5, 458794, 0, 5, 393258, 0, 5, 327722, 0, 5, 262186, 0, 5, 196650, 0, 5, 131114, 0, 5, 65578, 0, 5, 65579, 0, 5, 131115, 0, 5, 196651, 0, 5, 262187, 0, 5, 327723, 0, 5, 393259, 0, 5, 458795, 0, 5, 524331, 0, 5, 589867, 0, 5, 655403, 0, 5, 720939, 0, 5, 786475, 0, 5, 852011, 0, 5, 917547, 0, 5, 983083, 0, 5, 1048619, 0, 5, 1114155, 0, 5, 1179691, 0, 5, 1245227, 0, 5, 1310763, 0, 5, 1376299, 0, 5, 1376300, 0, 5, 1310764, 0, 5, 1245228, 0, 5, 1179692, 0, 5, 1114156, 0, 5, 1048620, 0, 5, 983084, 0, 5, 917548, 0, 5, 852012, 0, 5, 786476, 0, 5, 720940, 0, 5, 655404, 0, 5, 589868, 0, 5, 524332, 0, 5, 458796, 0, 5, 393260, 0, 5, 327724, 0, 5, 262188, 0, 5, 196652, 0, 5, 131116, 0, 5, 65580, 0, 5, 65581, 0, 5, 131117, 0, 5, 196653, 0, 5, 262189, 0, 5, 327725, 0, 5, 393261, 0, 5, 458797, 0, 5, 524333, 0, 5, 589869, 0, 5, 655405, 0, 5, 720941, 0, 5, 786477, 0, 5, 852013, 0, 5, 917549, 0, 5, 983085, 0, 5, 1048621, 0, 5, 1114157, 0, 5, 1179693, 0, 5, 1245229, 0, 5, 1310765, 0, 5, 1376301, 0, 5, 1376302, 0, 5, 1310766, 0, 5, 1245230, 0, 5, 1179694, 0, 5, 1114158, 0, 5, 1048622, 0, 5, 983086, 0, 5, 917550, 0, 5, 852014, 0, 5, 786478, 0, 5, 720942, 0, 5, 655406, 0, 5, 589870, 0, 5, 524334, 0, 5, 458798, 0, 5, 393262, 0, 5, 327726, 0, 5, 262190, 0, 5, 196654, 0, 5, 131118, 0, 5, 65582, 0, 5, 65583, 0, 5, 131119, 0, 5, 196655, 0, 5, 262191, 0, 5, 327727, 0, 5, 393263, 0, 5, 458799, 0, 5, 524335, 0, 5, 589871, 0, 5, 655407, 0, 5, 720943, 0, 5, 786479, 0, 5, 852015, 0, 5, 917551, 0, 5, 983087, 0, 5, 1048623, 0, 5, 1114159, 0, 5, 1179695, 0, 5, 1245231, 0, 5, 1310767, 0, 5, 1376303, 0, 5, 1376304, 0, 5, 1310768, 0, 5, 1245232, 0, 5, 1179696, 0, 5, 1114160, 0, 5, 1048624, 0, 5, 983088, 0, 5, 917552, 0, 5, 852016, 0, 5, 786480, 0, 5, 720944, 0, 5, 655408, 0, 5, 589872, 0, 5, 524336, 0, 5, 458800, 0, 5, 393264, 0, 5, 327728, 0, 5, 262192, 0, 5, 196656, 0, 5, 131120, 0, 5, 65584, 0, 5, 65534, 327680, 3, 65535, 327680, 3, 131071, 327680, 3, 196607, 327680, 3, 262143, 327680, 3, 327679, 327680, 3, 393215, 327680, 3, 458751, 327680, 3, 524287, 327680, 3, 589823, 327680, 3, 655359, 327680, 3, 720895, 327680, 3, 786431, 327680, 3, 851967, 327680, 3, 917503, 327680, 3, 983039, 327680, 3, 1048575, 327680, 3, 1114111, 327680, 3, 1179647, 327680, 3, 1245183, 327680, 3, 1310719, 327680, 3, 1376255, 327680, 3, 1441791, 327680, 3, 1507327, 327680, 3, 1572863, 327680, 3, 1507328, 327680, 3, 1507329, 327680, 3, 1507330, 327680, 3, 1507331, 327680, 3, 1507332, 327680, 3, 1507333, 327680, 3, 1507334, 327680, 3, 1507335, 327680, 3, 1507336, 327680, 3, 1507337, 327680, 3, 1507338, 327680, 3, 1507339, 327680, 3, 1507340, 327680, 3, 1507341, 327680, 3, 1507342, 327680, 3, 1507343, 327680, 3, 1507344, 327680, 3, 1507345, 327680, 3, 1507346, 327680, 3, 1507347, 327680, 3, 1507348, 327680, 3, 1507349, 327680, 3, 1507350, 327680, 3, 1507351, 327680, 3, 1507352, 327680, 3, 1507353, 327680, 3, 1507354, 327680, 3, 1507355, 327680, 3, 1507356, 327680, 3, 1507357, 327680, 3, 1507358, 327680, 3, 1507359, 327680, 3, 1507360, 327680, 3, 1507361, 327680, 3, 1507362, 327680, 3, 1507363, 327680, 3, 1507364, 327680, 3, 1507365, 327680, 3, 1507366, 327680, 3, 1507367, 327680, 3, 1507368, 327680, 3, 1507369, 327680, 3, 1507370, 327680, 3, 1507371, 327680, 3, 1507372, 327680, 3, 1507373, 327680, 3, 1507374, 327680, 3, 1507375, 327680, 3, 1507376, 327680, 3, 1507377, 327680, 3, 1507378, 327680, 3, 1441842, 327680, 3, 1376306, 327680, 3, 1310770, 327680, 3, 1245234, 327680, 3, 1179698, 327680, 3, 1114162, 327680, 3, 1048626, 327680, 3, 983090, 327680, 3, 917554, 327680, 3, 852018, 327680, 3, 786482, 327680, 3, 720946, 327680, 3, 655410, 327680, 3, 589874, 327680, 3, 524338, 327680, 3, 458802, 327680, 3, 393266, 327680, 3, 327730, 327680, 3, 262194, 327680, 3, 196658, 327680, 3, 131122, 327680, 3, 65586, 327680, 3, 50, 327680, 3, -65486, 327680, 3, -65487, 327680, 3, -65488, 327680, 3, -65489, 327680, 3, -65490, 327680, 3, -65491, 327680, 3, -65492, 327680, 3, -65493, 327680, 3, -65494, 327680, 3, -65495, 327680, 3, -65496, 327680, 3, -65497, 327680, 3, -65498, 327680, 3, -65499, 327680, 3, -65500, 327680, 3, -65501, 327680, 3, -65502, 327680, 3, -65503, 327680, 3, -65504, 327680, 3, -65505, 327680, 3, -65506, 327680, 3, -65507, 327680, 3, -65508, 327680, 3, -65509, 327680, 3, -65510, 327680, 3, -65511, 327680, 3, -65512, 327680, 3, -65513, 327680, 3, -65514, 327680, 3, -65515, 327680, 3, -65516, 327680, 3, -65517, 327680, 3, -65518, 327680, 3, -65519, 327680, 3, -65520, 327680, 3, -65521, 327680, 3, -65522, 327680, 3, -65523, 327680, 3, -65524, 327680, 3, -65525, 327680, 3, -65526, 327680, 3, -65527, 327680, 3, -65528, 327680, 3, -65529, 327680, 3, -65530, 327680, 3, -65531, 327680, 3, -65532, 327680, 3, -65533, 327680, 3, -65534, 327680, 3, -65535, 327680, 3, -65536, 327680, 3, -1, 327680, 3, -2, 327680, 3, 131070, 327680, 3, 196606, 327680, 3, 262142, 327680, 3, 327678, 327680, 3, 393214, 327680, 3, 458750, 327680, 3, 524286, 327680, 3, 589822, 327680, 3, 655358, 327680, 3, 720894, 327680, 3, 786430, 327680, 3, 851966, 327680, 3, 917502, 327680, 3, 983038, 327680, 3, 1048574, 327680, 3, 1114110, 327680, 3, 1179646, 327680, 3, 1245182, 327680, 3, 1310718, 327680, 3, 1376254, 327680, 3, 1441790, 327680, 3, 1507326, 327680, 3, 1572862, 327680, 3, 1638398, 327680, 3, 1638399, 327680, 3, 1572864, 327680, 3, 1572865, 327680, 3, 1572866, 327680, 3, 1572867, 327680, 3, 1572868, 327680, 3, 1572869, 327680, 3, 1572870, 327680, 3, 1572871, 327680, 3, 1572872, 327680, 3, 1572873, 327680, 3, 1572874, 327680, 3, 1572875, 327680, 3, 1572876, 327680, 3, 1572877, 327680, 3, 1572878, 327680, 3, 1572879, 327680, 3, 1572880, 327680, 3, 1572881, 327680, 3, 1572882, 327680, 3, 1572883, 327680, 3, 1572884, 327680, 3, 1572885, 327680, 3, 1572886, 327680, 3, 1572887, 327680, 3, 1572888, 327680, 3, 1572889, 327680, 3, 1572890, 327680, 3, 1572891, 327680, 3, 1572892, 327680, 3, 1572893, 327680, 3, 1572894, 327680, 3, 1572895, 327680, 3, 1572896, 327680, 3, 1572897, 327680, 3, 1572898, 327680, 3, 1572899, 327680, 3, 1572900, 327680, 3, 1572901, 327680, 3, 1572902, 327680, 3, 1572903, 327680, 3, 1572904, 327680, 3, 1572905, 327680, 3, 1572906, 327680, 3, 1572907, 327680, 3, 1572908, 327680, 3, 1572909, 327680, 3, 1572910, 327680, 3, 1572911, 327680, 3, 1572912, 327680, 3, 1572913, 327680, 3, 1572914, 327680, 3, 1572915, 327680, 3, 1507379, 327680, 3, 1441843, 327680, 3, 1376307, 327680, 3, 1310771, 327680, 3, 1245235, 327680, 3, 1179699, 327680, 3, 1114163, 327680, 3, 1048627, 327680, 3, 983091, 327680, 3, 917555, 327680, 3, 852019, 327680, 3, 786483, 327680, 3, 720947, 327680, 3, 655411, 327680, 3, 589875, 327680, 3, 524339, 327680, 3, 458803, 327680, 3, 393267, 327680, 3, 327731, 327680, 3, 262195, 327680, 3, 196659, 327680, 3, 131123, 327680, 3, 65587, 327680, 3, 51, 327680, 3, -65485, 327680, 3, -131021, 327680, 3, -131022, 327680, 3, -131023, 327680, 3, -131024, 327680, 3, -131025, 327680, 3, -131026, 327680, 3, -131027, 327680, 3, -131028, 327680, 3, -131029, 327680, 3, -131030, 327680, 3, -131031, 327680, 3, -131032, 327680, 3, -131033, 327680, 3, -131034, 327680, 3, -131035, 327680, 3, -131036, 327680, 3, -131037, 327680, 3, -131038, 327680, 3, -131039, 327680, 3, -131040, 327680, 3, -131041, 327680, 3, -131042, 327680, 3, -131043, 327680, 3, -131044, 327680, 3, -131045, 327680, 3, -131046, 327680, 3, -131047, 327680, 3, -131048, 327680, 3, -131049, 327680, 3, -131050, 327680, 3, -131051, 327680, 3, -131052, 327680, 3, -131053, 327680, 3, -131054, 327680, 3, -131055, 327680, 3, -131056, 327680, 3, -131057, 327680, 3, -131058, 327680, 3, -131059, 327680, 3, -131060, 327680, 3, -131061, 327680, 3, -131062, 327680, 3, -131063, 327680, 3, -131064, 327680, 3, -131065, 327680, 3, -131066, 327680, 3, -131067, 327680, 3, -131068, 327680, 3, -131069, 327680, 3, -131070, 327680, 3, -131071, 327680, 3, -131072, 327680, 3, -65537, 327680, 3, -65538, 327680, 3)

[node name="ZoomCam" parent="." instance=ExtResource("3_mx0nm")]
max_zoom = 0.3

[node name="SpawnZone" type="Area2D" parent="."]

[node name="SpawnArea" type="CollisionShape2D" parent="SpawnZone"]
position = Vector2(403, 189)
shape = SubResource("RectangleShape2D_xudr5")

[node name="Spawner" parent="." instance=ExtResource("4_hp00e")]
position = Vector2(52, 68)
